<resources>
    <string name="app_name">ZayLabsApp1</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="language">Language</string>
    <string name="zaylabs">Zay Labs</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="cnic">CNIC</string>
    <string name="driving_license">Driving License</string>
    <string name="vahicletype1">Suzuki</string>
    <string name="vahicletype2">Riksha</string>
    <string name="registration_number">Registration Number</string>
    <string name="verify_email">Verify Email</string>
    <string name="loading">Loading..</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="uploaddocuments">Upload Documents</string>
    <string name="title_activity_stub_maps">Map</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="wallet">Wallet</string>
    <string name="documents">Documents</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="help">Help</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale_L">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="Upload_dl">Upload Driving License</string>
    <string name="Upload_cnic">Upload CNIC</string>
    <string name="Upload_reg">Upload Reg:Document</string>
    <string name="reg_doc">Registration Document</string>
    <string name="front">Front</string>
    <string name="back_pic">Back</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
