<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/Home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"
        />

    <item
        android:id="@+id/Profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        />

    <item
        android:id="@+id/History"
        android:title="@string/history"
        android:icon="@drawable/ic_history_black_24dp"
        />

    <item
        android:id="@+id/wallet"
        android:title="@string/wallet"
        android:icon="@drawable/ic_monetization_on_black_24dp"
        />
    <item
        android:id="@+id/documents"
        android:title="@string/documents"
        android:icon="@drawable/ic_assignment_black_24dp"
        />
        <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_menu_manage"
            />



        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout"
            />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/get_help"
                android:title="@string/help"
                android:icon="@drawable/ic_help_black_24dp"
                />
        </menu>
    </item>

</menu>
